--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,15 @@
-<link href="popup.css" rel="stylesheet" type="text/css" />
-<script type="module" src="popup.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="popup.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div class="container">
+        <div>
+            <button id="toggleButton">Toggle On</button>
+        </div>
+    </div>
 
-<div class="container">
-  <div>
-    <div class="title">Your bookmarks for this video</div>
-
-    <div class="bookmarks" id="bookmarks"></div>
-  </div>
-</div>
+    <script type="module" src="popup.js"></script>
+</body>
+</html>
