Background and contenScript working

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div>
-            <button id="toggleButton">Toggle On</button>
+            <button id="toggleButton">Extension is On</button>
         </div>
     </div>
 
