Popup working. TODO: remove console.logs, icons

--- a/popup.html
+++ b/popup.html
@@ -5,8 +5,34 @@
 </head>
 <body>
     <div class="container">
-        <div>
-            <button id="toggleButton">Extension is On</button>
+        <div class="title-div">
+            <img src="assets/Kalimat_title.png" alt="Kalimat" id="title-img">
+        </div>
+        <div class="options-group">
+            <h2 class = "options-title">Enable Options</h2>
+            <div class = "option">
+                <span class = "option-text">Kalimat On</span>
+                <label class="switch">
+                    <input type="checkbox" id="global-toggle" checked>
+                    <span class="slider round"></span>
+                </label>
+            </div>
+
+            <div class = "option">
+                <span class = "option-text">Charts</span>
+                <label class="switch">
+                    <input type="checkbox" id="chart-toggle" checked>
+                    <span class="slider round"></span>
+                </label>
+            </div>
+
+            <div class = "option">
+                <span class = "option-text">Keyword List</span>
+                <label class="switch">
+                    <input type="checkbox" id="word-list-toggle" checked>
+                    <span class="slider round"></span>
+                </label>
+            </div>
         </div>
     </div>
 
