popup language change working. and updated visuals

--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html  dir = "ltr" lang = "en">
 <head>
+    <meta charset = "utf-8">
     <link href="popup.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="container">
         <div class="title-div">
-            <img src="assets/Kalimat_title.png" alt="Kalimat" id="title-img">
+            <img src="assets/Kalimat_header.png" alt="Kalimat" id="title-img">
         </div>
         <div class="options-group">
-            <h2 class = "options-title">Enable Options</h2>
             <div class = "option">
-                <span class = "option-text">Kalimat On</span>
+                <span class = "option-text lang-text">Kalimat On</span>
                 <label class="switch">
                     <input type="checkbox" id="global-toggle" checked>
                     <span class="slider round"></span>
@@ -19,7 +19,7 @@
             </div>
 
             <div class = "option">
-                <span class = "option-text">Charts</span>
+                <span class = "option-text lang-text">Charts</span>
                 <label class="switch">
                     <input type="checkbox" id="chart-toggle" checked>
                     <span class="slider round"></span>
@@ -27,15 +27,23 @@
             </div>
 
             <div class = "option">
-                <span class = "option-text">Keyword List</span>
+                <span class = "option-text lang-text">Keyword List</span>
                 <label class="switch">
                     <input type="checkbox" id="word-list-toggle" checked>
                     <span class="slider round"></span>
                 </label>
             </div>
+            <div class = "option">
+                <span class = "option-text lang-text">Arabic</span>
+                <label class="switch">
+                    <input type="checkbox" id="arabic-toggle" checked>
+                    <span class="slider round"></span>
+                </label>
         </div>
     </div>
 
+    <script type="module" src="scripts/LanguageManager.js"></script>
     <script type="module" src="popup.js"></script>
+    
 </body>
 </html>
