--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html  dir = "ltr" lang = "en">
 <head>
     <meta charset = "utf-8">
-    <link href="popup.css" rel="stylesheet" type="text/css" />
+    <link href="popup_en.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="container">
