--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,7 +2,10 @@
 <html  dir = "ltr" lang = "en">
 <head>
     <meta charset = "utf-8">
+    
     <link href="popup_en.css" rel="stylesheet" type="text/css" />
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
+    <!-- <script src="lib/glogin_platform.js" async defer></script> -->
 </head>
 <body>
     <div class="container">
@@ -41,7 +44,8 @@
                 </label>
         </div>
     </div>
-
+    <!-- <script type = "module" src = "lib/glogin_platform.js"></script>
+    <div class = "g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-clientid="467769474365-subo3k3h1cbp63u3pec5f4q6etdmtuqq.apps.googleusercontent.com"></div> -->
     <script type="module" src="scripts/LanguageManager.js"></script>
     <script type="module" src="popup.js"></script>
     
