--- a/website_frontend/public/index.html
+++ b/website_frontend/public/index.html
@@ -39,5 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
+    <script type="text/javascript">
+      // Paddle.Setup({ vendor: "test_18780c77df0655fc4d02d1b24ec", debug: true })
+      Paddle.Environment.set("sandbox");
+      Paddle.Initialize({ token: "test_18780c77df0655fc4d02d1b24ec"}); 
+    </script>
   </body>
 </html>
