--- a/website_frontend/public/index.html
+++ b/website_frontend/public/index.html
@@ -43,7 +43,9 @@
     <script type="text/javascript">
       // Paddle.Setup({ vendor: "test_18780c77df0655fc4d02d1b24ec", debug: true })
       Paddle.Environment.set("sandbox");
-      Paddle.Initialize({ token: "test_18780c77df0655fc4d02d1b24ec"}); 
+
+      
+      // Paddle.Initialize({ token: "test_18780c77df0655fc4d02d1b24ec"})
     </script>
   </body>
 </html>
